# boticordrs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
examples/parallel_loops/: Cargo.toml
examples/parallel_loops/src/: main.rs
examples/simple_data_fetch/: Cargo.toml
examples/simple_data_fetch/src/: main.rs
examples/simple_links_fetch/src/: main.rs
examples/simple_post_stats/src/: main.rs
src/: errors.rs  lib.rs  types.rs
