[package]
name = "boticordrs"
description = "Crate for BotiCord API"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/boticordrs"
repository = "https://github.com/grey-cat-1908/boticordrs"
authors = ["Victor Kotlin"]
keywords = ["discord", "boticord", "bots"]
categories = ["api-bindings", "web-programming::http-client"]
include = ["src/**/*", "LICENSE.txt", "README.md"]
version = "0.1.2"
edition = "2021"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
url = "2.2"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
tokio = { version = "1.14", features = ["macros", "rt-multi-thread"] }
serde_test = "1"
